<resources>
    <string name="app_name">EstatePie</string>
    <string name="action_settings">Settings</string>
    <string name="select_category_title"><u>Select Category</u></string>
    <string name="residential">Residential</string>
    <string name="commercial">Commercial</string>
    <string name="category">Category</string>
    <string-array name="category_filter">
        <item>Select One</item>
        <item>Residential</item>
        <item>Commercial</item>
    </string-array>
    <string name="all_properties">All Properties</string>
    <string name="property_type_title"><u>Property Type</u></string>
    <string name="bungalow">Bungalow</string>
    <string name="apartment">Apartment</string>
    <string name="duplex">Duplex</string>
    <string name="chalet">Chalet</string>
    <string name="townhouse">Townhouse</string>
    <string name="mansion">Mansion</string>
    <string name="condominium">Condominium</string>
    <string name="property_type">Property Type</string>
    <string name="for_sale_for_rent_title"><u>For Sale / For Rent</u></string>
    <string name="for_sale">For Sale</string>
    <string name="for_rent">For Rent</string>
    <string name="for_sale_for_rent">For Sale / For Rent</string>
    <string-array name="for_sale_for_rent_filter">
        <item>Select One</item>
        <item>For Sale</item>
        <item>For Rent</item>
    </string-array>
    <string name="amenities_title"><u>Amenities</u></string>
    <string name="cinema">Cinema</string>
    <string name="library">Library</string>
    <string name="playground">Playground</string>
    <string name="swimming_pool">Swimming Pool</string>
    <string name="ev_charging_station">EV charging station</string>
    <string name="business_center">Business Center</string>
    <string name="parking">Parking</string>
    <string name="washing_machine">Washing Machine</string>
    <string name="gym">Gym</string>
    <string name="amenities">Amenities</string>
    <string name="fees_title"><u>Fees</u></string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="fees">Fees</string>
    <string-array name="fees_filter">
        <item>Select One</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string name="broker_title"><u>Broker</u></string>
    <string name="broker">Broker</string>
    <string-array name="range_slider">
        <item>1</item>
        <item>10000</item>
    </string-array>
    <string name="all_bills">All Bills</string>
    <string-array name="unit_array">
        <item>Sq yds</item>
        <item>Sq mt</item>
        <item>Sq ft</item>
        <item>Acres</item>
    </string-array>
    <string name="all_status">All Status</string>
    <string name="all_reports">All\nReports</string>
    <string-array name="maintenance_reports">
        <item>In Progress</item>
        <item>Completed</item>
    </string-array>
    <string name="select_date">Select Date</string>
    <string name="all">All</string>
    <string name="sort_by_price">Sort by price</string>
    <string-array name="asec_desc">
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>
    <string-array name="all_incident_report">
        <item>All</item>
        <item>In Progress</item>
        <item>Completed</item>
    </string-array>
    <string-array name="all_event_array">
        <item>All</item>
        <item>UpComing</item>
        <item>Past</item>
    </string-array>
    <string-array name="incident_report">
        <item>All</item>
        <item>Under Review</item>
        <item>Resolved</item>
    </string-array>
    <string-array name="vehicle_make_array">
        <item>Alfa</item>
        <item>Audi</item>
        <item>BMW</item>
        <item>Ford</item>
        <item>Honda</item>
        <item>Hummer</item>
        <item>jaguar</item>
        <item>Jeep</item>
        <item>Kia</item>
        <item>Land</item>
        <item>Hundai</item>
        <item>Infiniti</item>
    </string-array>
    <string-array name="vehicle_model_array">
        <item>1980</item>
        <item>1981</item>
        <item>1982</item>
        <item>1984</item>
        <item>1985</item>
        <item>1986</item>
        <item>1987</item>
        <item>1988</item>
        <item>1989</item>
        <item>1990</item>
        <item>1991</item>
        <item>1992</item>
        <item>1993</item>
        <item>1994</item>
        <item>1995</item>
        <item>1996</item>
        <item>1997</item>
        <item>1998</item>
        <item>1999</item>
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
    </string-array>
    <string-array name="vehicle_color_array">
        <item>Black</item>
        <item>Blue</item>
        <item>Green</item>
        <item>Red</item>
        <item>White</item>
    </string-array>
    <string-array name="lease_duration_array">
        <item>1 Month</item>
        <item>2 Months</item>
        <item>3 Months</item>
        <item>4 Months</item>
        <item>5 Months</item>
        <item>6 Months</item>
        <item>7 Months</item>
        <item>8 Months</item>
        <item>9 Months</item>
        <item>10 Months</item>
        <item>11 Months</item>
        <item>12 Months</item>
        <item>13 Months</item>
        <item>14 Months</item>
        <item>15 Months</item>
    </string-array>
    <string name="write_storage_permission_required">Write Storage Permission Required</string>
    <string name="read_storage_permission_required">Read Storage Permission Required</string>
    <string name="enable_read_storage_permission">Enable Read Storage Permission</string>
    <string name="enable_write_storage_permission">Enable Write Storage Permission</string>
    <string name="enable_camera_permission">Enable Camera Permission</string>
    <string name="camera_permission_required">Camera Permission Required</string>
    <string name="current_location_not_available">Current Location Not Available</string>
    <string name="access_location_permission_required">Access Location Permission Required</string>
    <string name="location_services_are_not_enabled">Location Services Are Not Enabled</string>
    <string name="enter_building_name">Enter Building Name</string>
    <string name="enter_building_number">Enter Building Number</string>
    <string name="enter_building_location">Enter Place Location</string>
    <string name="upload_image">Please Upload Image</string>
    <string name="enter_start_no_range">Enter Start No Range</string>
    <string name="enter_end_no_range">Enter End No Range</string>
    <string name="enter_start_alpha_range">Enter Start Alpha Range</string>
    <string name="enter_end_alpha_range">Enter End Alpha Range</string>
    <string name="enter_notes">Enter Notes</string>
    <string name="enter_date_time">Select Date Time</string>
    <string name="enter_invoice_amount">Enter Invoice Amount</string>
    <string name="enter_lease_duration">Enter Lease Duration</string>
    <string name="enter_bill_type">Select Bill Type</string>
    <string name="enter_lease_amount">Enter Lease Amount</string>
    <string name="enter_property_name">Select Property Name</string>
    <string name="as_easy_as_pie">As Easy As Pie</string>
    <string name="help_you_find">Help you find the best place to stay!</string>
    <string name="intro_description">Easy process, affordable prices  and you can get any units that you  like anywhere, anytime.</string>
    <string name="explore_ads"><u>Explore Ads</u></string>
    <string name="login">Log In</string>
    <string name="tenant_signup">Tenant Sign Up</string>
    <string name="management_signup">Management Sign Up</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_id_or_username">Email ID or Username</string>
    <string name="continue_with_apple">Continue with Apple</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="login_small">Login</string>
    <string name="input_your_email_and_password">Input your email and password</string>
    <string name="email_Address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_account">Don\'t have an account? <font color="#2C8DEE"><b>Sign Up</b></font></string>
    <string name="resend_code"><font color="#2C8DEE"><u>Click here to resend the verification email.</u></font></string>
    <string name="forgot_password_">Forgot Password</string>
    <string name="forgot_msg">Enter your registered email below\nto receive password reset instructions.</string>
    <string name="submit">Submit</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="subscribe_plans">Subscriber Plans</string>
    <string name="free">Free</string>
    <string name="web_access_mobile_app"><![CDATA[Web Access & Mobile App]]></string>
    <string name="keep_it_basic">Keep it Basic!</string>
    <string name="web_and_mobile_app">Web and Mobile App</string>
    <string name="automatic_payments">Automatic payments</string>
    <string name="unlimited_tenant_management">Unlimited Tenant management</string>
    <string name="invoicing_receipts"><![CDATA[Invoicing & Receipts]]></string>
    <string name="property_management">Property Management</string>
    <string name="excel_csv_data_import"><![CDATA[Excel & CSV data Import]]></string>
    <string name="billing_payments"><![CDATA[Billing & Payments]]></string>
    <string name="profile">Profile</string>
    <string name="maintenance_requests">Maintenance Requests</string>
    <string name="photo_gallery">Photo Gallery</string>
    <string name="free_ads_listings">Free Ads/ Listings</string>
    <string name="monthly">Monthly</string>
    <string name="_99_00_usd">99.00 USD</string>
    <string name="month">Month</string>
    <string name="select_plan">SELECT PLAN</string>
    <string name="explore">Explore</string>
    <string name="user_settings">User Settings</string>
    <string name="notifications">Notifications</string>
    <string name="import_csv_excel">Import CSV, Excel</string>
    <string name="help_and_support"><![CDATA[Help & Support]]></string>
    <string name="tips">Tips</string>
    <string name="privacy">Privacy Policy</string>
    <string name="logout"><font color='#eb4335'>Logout</font></string>
    <string name="dashboard">Dashboard</string>
    <string name="properties">Properties</string>
    <string name="tenants">Tenants</string>
    <string name="billing">Billing</string>
    <string name="requests">Requests</string>
    <string name="change_password">Change Password</string>
    <string name="payment_management">Payment Management</string>
    <string name="help_support"><![CDATA[Help & Support]]></string>
    <string name="card_number">Card Number</string>
    <string name="delete_account">Delete Account</string>
    <string name="card_type">Card Type</string>
    <string name="visa">Visa</string>
    <string name="x_no">XXXX XXXX XXXX </string>
    <string name="expiry">Expiry</string>
    <string name="_11_2027">11/2027</string>
    <string name="visa_caps">VISA</string>
    <string name="_6593">6593</string>
</resources>