<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/managementExploreAdsFragment"
            android:icon="@drawable/ic_tenant"
            android:title="@string/explore" />
        <item
            android:id="@+id/userSettingsFragment"
            android:icon="@drawable/ic_profile"
            android:title="@string/user_settings"
            android:checked="true"/>
        <item
            android:id="@+id/notificationsFragment"
            android:icon="@drawable/ic_notification"
            android:title="@string/notifications" />
        <item
            android:id="@+id/plansFragment2"
            android:title="@string/subscribe_plans"
            android:icon="@drawable/ic_subscribe"/>
        <item
            android:id="@+id/CSVFragment"
            android:title="@string/import_csv_excel"
            android:icon="@drawable/ic_sim_card"/>
        <item
            android:id="@+id/helpsFragment"
            android:title="@string/help_and_support"
            android:icon="@drawable/ic_info"/>
        <item
            android:id="@+id/tipsFragment"
            android:title="@string/tips"
            android:icon="@drawable/ic_tip"/>
        <item
            android:id="@+id/privacyFragment"
            android:title="@string/privacy"
            android:icon="@drawable/ic_privacy"/>
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drw_logout"
            android:title="@string/logout"
            android:icon="@drawable/ic_log_out" />
    </group>
    <group>
        <item
            android:id="@+id/deleteButton"
            android:title="@string/delete_account"
            android:icon="@drawable/ic_delete_icon"
            android:actionLayout="@layout/delete_button_layout" />
    </group>
</menu>