<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/changePasswordFragment2"
            android:icon="@drawable/ic_lock"
            android:title="@string/change_password" />
        <item
            android:id="@+id/notificationsFragment3"
            android:icon="@drawable/ic_notification"
            android:title="@string/notifications" />
        <item
            android:id="@+id/tenantsPaymentFragment"
            android:icon="@drawable/ic_profile"
            android:title="@string/payment_management" />
        <item
            android:id="@+id/helpsFragment2"
            android:title="@string/help_support"
            android:icon="@drawable/ic_info"/>
        <item
            android:id="@+id/tipsFragment2"
            android:title="@string/tips"
            android:icon="@drawable/ic_tip"/>
        <item
            android:id="@+id/privacyFragment2"
            android:title="@string/privacy"
            android:icon="@drawable/ic_privacy"/>
    </group>
    <group>
        <item
            android:id="@+id/drw_logout"
            android:title="@string/logout"
            android:icon="@drawable/ic_log_out" />
    </group>

    <group>
        <item
            android:id="@+id/deleteButton"
            android:title="@string/delete_account"
            android:icon="@drawable/ic_delete_icon"
            android:actionLayout="@layout/delete_button_layout" />
    </group>

</menu>