<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/card_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_10sdp"
    android:background="@drawable/customer_card_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_12sdp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_light"
            android:text="@string/card_type"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/card_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/visa"
            android:textSize="@dimen/_16ssp"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_light"
            android:text="@string/card_number"
            android:layout_marginTop="@dimen/_12sdp"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_8sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/x_no"
                android:textSize="@dimen/_16ssp"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/card_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/_6593"
                android:textSize="@dimen/_16ssp"
                android:textColor="@color/white" />


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_light"
            android:text="@string/expiry"
            android:layout_marginTop="@dimen/_12sdp"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginTop="@dimen/_8sdp">

        <TextView
            android:id="@+id/card_expiry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/_11_2027"
            android:layout_weight="1"
            android:textSize="@dimen/_16ssp"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_light_italic"
            android:text="@string/visa_caps"
            android:paddingEnd="@dimen/_12sdp"
            android:paddingStart="@dimen/_1sdp"
            android:gravity="end"
            android:layout_weight="1"
            android:textSize="@dimen/_18ssp"
            android:textColor="@color/white" />

    </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>