<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/_12sdp"
    app:cardBackgroundColor="@color/blue"
    android:layout_margin="@dimen/_8sdp">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_12sdp">
    <ImageView
        android:id="@+id/imgBadge"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:src="@drawable/ic_badge_free"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/imgBadge"
        app:layout_constraintTop_toTopOf="@id/imgBadge"
        android:textColor="@color/white"
        android:textSize="@dimen/_24ssp"
        android:layout_marginStart="@dimen/_12sdp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/free"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="@id/tvTitle"
        app:layout_constraintBottom_toBottomOf="@id/imgBadge"
        android:textSize="@dimen/_12ssp"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/white"
        android:text="@string/web_access_mobile_app"/>
    <TextView
        android:id="@+id/basicTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/imgBadge"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/_12sdp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/keep_it_basic"/>
    <LinearLayout
        android:id="@+id/linDetails"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/basicTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_8sdp">
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">
          <TextView
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="0.5"
              android:fontFamily="@font/roboto_regular"
              android:textSize="@dimen/_9ssp"
              android:textColor="@color/white"
              android:text="@string/web_and_mobile_app"/>
          <TextView
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="0.5"
              android:fontFamily="@font/roboto_regular"
              android:textSize="@dimen/_9ssp"
              android:textColor="@color/white"
              android:text="@string/automatic_payments"/>
      </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:fontFamily="@font/roboto_regular"
                android:textSize="@dimen/_9ssp"
                android:textColor="@color/white"
                android:text="@string/unlimited_tenant_management"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:fontFamily="@font/roboto_regular"
                android:textSize="@dimen/_9ssp"
                android:textColor="@color/white"
                android:text="@string/invoicing_receipts"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:fontFamily="@font/roboto_regular"
                android:textSize="@dimen/_9ssp"
                android:textColor="@color/white"
                android:text="@string/property_management"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:fontFamily="@font/roboto_regular"
                android:textSize="@dimen/_9ssp"
                android:textColor="@color/white"
                android:text="@string/excel_csv_data_import"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:fontFamily="@font/roboto_regular"
                android:textSize="@dimen/_9ssp"
                android:textColor="@color/white"
                android:text="@string/billing_payments"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:fontFamily="@font/roboto_regular"
                android:textSize="@dimen/_9ssp"
                android:textColor="@color/white"
                android:text="@string/profile"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:fontFamily="@font/roboto_regular"
                android:textSize="@dimen/_9ssp"
                android:textColor="@color/white"
                android:text="@string/maintenance_requests"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:fontFamily="@font/roboto_regular"
                android:textSize="@dimen/_9ssp"
                android:textColor="@color/white"
                android:text="@string/photo_gallery"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/roboto_regular"
            android:textSize="@dimen/_9ssp"
            android:textColor="@color/white"
            android:text="@string/free_ads_listings"/>
        <LinearLayout
            android:id="@+id/linPlans"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
           android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/_12sdp">
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/_5sdp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:paddingHorizontal="@dimen/_18sdp"
                    android:paddingVertical="@dimen/_10ssp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/monthly"
                        android:textColor="@color/blueVeryDark"
                        android:fontFamily="@font/roboto_regular"
                        android:textSize="@dimen/_8ssp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_99_00_usd"
                        android:textColor="@color/blueVeryDark"
                        android:fontFamily="@font/roboto_medium"
                        android:textSize="@dimen/_12ssp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/month"
                        android:textColor="@color/blueVeryDark"
                        android:fontFamily="@font/roboto_regular"
                        android:textSize="@dimen/_8ssp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <View
                android:layout_width="@dimen/_20sdp"
                android:layout_height="0dp"/>
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/_5sdp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:paddingHorizontal="@dimen/_18sdp"
                    android:paddingVertical="@dimen/_10ssp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/monthly"
                        android:textColor="@color/blueVeryDark"
                        android:fontFamily="@font/roboto_regular"
                        android:textSize="@dimen/_8ssp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_99_00_usd"
                        android:textColor="@color/blueVeryDark"
                        android:fontFamily="@font/roboto_medium"
                        android:textSize="@dimen/_12ssp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/month"
                        android:textColor="@color/blueVeryDark"
                        android:fontFamily="@font/roboto_regular"
                        android:textSize="@dimen/_8ssp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnManagementSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            app:layout_constraintBottom_toTopOf="@id/btnTenantSignup"
            android:layout_marginBottom="@dimen/_4sdp"
            style="@style/AppSolidButton"
            android:textColor="@color/blueVeryDark"
            android:text="@string/select_plan"
            app:rippleColor="@color/blue"
            android:backgroundTint="@color/white"
            app:cornerRadius="@dimen/_6sdp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>